--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,17 +5,14 @@
 <head>
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Spring Boot WebSocket Chat Application | CalliCoder</title>
+    <title>Spring Boot WebSocket Chat Aplication </title>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
 </head>
 <body>
-<noscript>
-    <h2>Sorry! Your browser doesn't support Javascript</h2>
-</noscript>
 
 <div id="username-page">
     <div class="username-page-container">
-        <h1 class="title">Type your username</h1>
+        <h1 class="title">Enter your username</h1>
         <form id="usernameForm" name="usernameForm">
             <div class="form-group">
                 <input type="text" id="name" placeholder="Username"
@@ -33,7 +30,7 @@
 <div id="chat-page" class="hidden">
     <div class="chat-container">
         <div class="chat-header">
-            <h2>JavaTechie Global Chat Box</h2>
+            <h2><a href="https://www.facebook.com/huynx.dev.dn/" target="_blank">Nguyen Xuan Huy</a></h2>
         </div>
         <div class="connecting">Connecting...</div>
         <ul id="messageArea">
